--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Code by InstacartCode</title>
+    <title>Instacart.com Discount Codes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,17 +11,12 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Code</h1>
+      <h1 class="project-name">Current Code: RITE1891EA</h1>
       <h2 class="project-tagline">Instacart.com Discount Codes</h2>
-      <a href="https://github.com/InstacartCode/code" class="btn">View on GitHub</a>
-      <a href="https://github.com/InstacartCode/code/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/InstacartCode/code/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/InstacartCode/code" class="btn">$10 OFF First Order</a>
     </section>
-
     <section class="main-content">
-      <h3>
 
-      </h3>
     </section>
 
   
