--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Current Code: RITE1891EA</h1>
       <h2 class="project-tagline">Instacart.com Discount Codes</h2>
-      <a href="https://github.com/InstacartCode/code" class="btn">$10 OFF First Order</a>
+      <a href="https://inst.cr/t/HayJ73UzL" class="btn">$10 OFF First Order</a>
     </section>
     <section class="main-content">
 
