--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Current Code: RITE1CF10E</h1>
+      <h1 class="project-name">Current Code: RITE1891EA</h1>
       <h2 class="project-tagline">Instacart.com Discount Codes</h2>
       <a href="https://inst.cr/t/heiUxKuyX" class="btn">$10 OFF First Order</a>
     </section>
