--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="page-header">
       <h1 class="project-name">Current Code: MBATTAH1E11EB</h1>
       <h2 class="project-tagline">Instacart.com Discount Codes</h2>
-      <a href="https://inst.cr/t/quw1JBr6X" class="btn">$10 OFF First Order</a>
+      <a href="https://inst.cr/t/BPhJCvzqt" class="btn">$10 OFF First Order</a>
     </section>
     <section class="main-content">
 
